--- a/index.html
+++ b/index.html
@@ -10,6 +10,47 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css" >
 </head>
 <body>
-    <p>Hello</p>
+    <img src="bg.png" alt="Background image" class="bg">
+
+    <header>
+        <i class="fa-solid fa-layer-group logo"></i>
+        <nav class="nav">
+            <ul class="links">
+                <li class="link-item">
+                    <a href="#" class="link">Login</a>
+                </li>
+                <li class="link-item">
+                    <a href="#" class="link link--btn">Join as Artist</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+        <section class="intro">
+            <section class="search">
+                <h1>Book the <span class="emphasis">idea artist</span> for your event</h1>
+
+                <form action="" class="form">
+                    <input type="text" name="" id="" class="input">
+                    <input type="text" name="" id="" class="input">
+
+                    <button class="btn">Search</button>
+                </form>
+            </section>
+
+            <section class="photos">
+
+            </section>
+        </section>
+
+        <section class="credentials">
+
+        </section>
+
+        <section class="how">
+
+        </section>
+    </main>
 </body>
 </html>
